--- a/style.css
+++ b/style.css
@@ -6,8 +6,9 @@
 
 body {
 	font-family: 'Montserrat', sans-serif;
-	background: #e0e0e0;
-	color: #1d1d1d;
+	background: black;
+	color: var(--white-text);
+	/* overflow-x: hidden; */
 }
 
 .contenedor {
@@ -36,7 +37,7 @@ body {
 }
 
 .paginacion {
-	position: fixed;
+	/* position: fixed; */
 	bottom: 0;
 	background: #100a1f;
 	width: 100%;
@@ -65,4 +66,166 @@ body {
 
 .paginacion button:hover {
 	background: #137c32;
+}
+
+
+/*Estilo pagina*/
+
+:root {
+    --background: #050505;
+	--background-minus-black: #151616;
+    --purple-principal: #8A2BE2;
+    --celeste-principal: #00FFFF;
+
+	--white-text: #e0e0e0;
+}
+
+header {
+	/* display: grid; */
+	/* grid-template-columns: repeat(2, 1fr); */
+	height: 90vh;
+	width: 100%;
+	align-items: center;
+	
+	background-image: url('https://www.etapainfantil.com/wp-content/uploads/2020/05/Peliculas-Netflix-familiares-1000x563.jpg.webp');
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: 100%;
+	/* padding-bottom: 5vh; */
+
+	position: relative;
+  
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 10vh; /* Adjust height for fade-out length */
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0), var(--background));
+  }
+}
+.header-bar{
+	display: grid;
+	grid-template-columns: 20% 80%;
+	height: 10vh;
+	padding: 1vh 3vw;
+	align-items: center;
+	/* background: linear-gradient(to top, rgba(255, 255, 255, 0), var(--background)); */
+
+	&:hover{
+		background-color: var(--background);
+		transition: 2s;
+	}
+}
+
+.switch-container {
+	position: relative;
+	width: 60px;
+	height: 34px;
+}
+
+.switch-input {
+	opacity: 0;
+	width: 0;
+	height: 0;
+}
+
+.switch-label {
+	position: absolute;
+	cursor: pointer;
+	background-color: var(--purple-principal);
+	border-radius: 34px;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	transition: background-color 0.3s ease;
+}
+
+.switch-label:before {
+	position: absolute;
+	content: "";
+	height: 26px;
+	width: 26px;
+	left: 4px;
+	bottom: 4px;
+	background-color: white;
+	border-radius: 50%;
+	transition: transform 0.3s ease;
+}
+
+.switch-input:checked+.switch-label {
+	background-color: var(--salmon);
+	/* Cambiar a tu color oscuro */
+}
+
+.switch-input:checked+.switch-label:before {
+	transform: translateX(26px);
+}
+
+/* .logo-header h1{
+	background: linear-gradient(to left, #8A2BE2, #00FFFF);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+	background-size: 25%;
+} */
+
+.options-header {
+	display: flex;
+	gap: 3vw;
+	justify-content: flex-end;
+	align-items: center;
+}
+
+.hero-section {
+    /* margin-top: -5vh; */
+    /* display: grid; */
+    /* flex-direction: column; */
+    /* align-items: center; */
+    /* grid-template-columns: 30% 70%; */
+    /* gap: 5vh; */
+	height: 80vh;
+	width: 40%;
+	margin-left: 3vw;
+	display: flex;
+    flex-direction: column;
+	justify-content: end;	
+	padding-bottom: 10vh;
+
+    /* z-index: 1; */
+    backdrop-filter: blur(10px);
+    border-style: solid;
+    border-color: white;
+    border-width: 2px;
+    border-radius: 15px;
+}
+
+.container-buttons-hero {
+    /* display: flex; */
+    /* justify-content: center; */
+    gap: 5vw;
+    width: 40vw;
+}
+
+.button-hero {
+    margin-top: 4vh;
+    height: 5vh;
+    width: 10vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.right-side-hero {
+    margin-right: 2vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.right-side-hero img {
+    /* height: 100%; */
+	z-index: 0;
 }
