--- a/style.css
+++ b/style.css
@@ -112,12 +112,13 @@ header {
 	padding: 1vh 3vw;
 	align-items: center;
 	/* background: linear-gradient(to top, rgba(255, 255, 255, 0), var(--background)); */
-
-	backdrop-filter: blur(5px);
+	background-color: var(--background-minus-black);
+	/* backdrop-filter: blur(5px); */
     /* border-style: solid; */
     /* border-color: white; */
     /* border-width: 2px; */
     /* border-radius: 15px; */
+	margin-bottom: 1rem;
 
 	&:hover{
 		background-color: var(--background);
@@ -125,58 +126,13 @@ header {
 	}
 }
 
-.switch-container {
-	position: relative;
-	width: 60px;
-	height: 34px;
-}
-
-.switch-input {
-	opacity: 0;
-	width: 0;
-	height: 0;
-}
-
-.switch-label {
-	position: absolute;
-	cursor: pointer;
-	background-color: var(--purple-principal);
-	border-radius: 34px;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	transition: background-color 0.3s ease;
-}
-
-.switch-label:before {
-	position: absolute;
-	content: "";
-	height: 26px;
-	width: 26px;
-	left: 4px;
-	bottom: 4px;
-	background-color: white;
-	border-radius: 50%;
-	transition: transform 0.3s ease;
-}
-
-.switch-input:checked+.switch-label {
-	background-color: var(--salmon);
-	/* Cambiar a tu color oscuro */
-}
-
-.switch-input:checked+.switch-label:before {
-	transform: translateX(26px);
-}
-
-/* .logo-header h1{
+.logo-header h1{
 	background: linear-gradient(to left, #8A2BE2, #00FFFF);
     -webkit-background-clip: text;
     background-clip: text;
     color: transparent;
-	background-size: 25%;
-} */
+	/* background-size: 25%; */
+}
 
 .options-header {
 	display: flex;
@@ -184,24 +140,56 @@ header {
 	justify-content: flex-end;
 	align-items: center;
 }
+.introduction-section{
+	margin: 1rem 3vw;
+}
 
-.hero-section {
-    /* margin-top: -5vh; */
-    /* display: grid; */
-    /* flex-direction: column; */
-    /* align-items: center; */
-    /* grid-template-columns: 30% 70%; */
-    /* gap: 5vh; */
-	height: 80vh;
-	width: 40%;
-	margin-left: 3vw;
-	display: flex;
-    flex-direction: column;
-	justify-content: end;	
-	padding-bottom: 10vh;
+.more-popular-hero{
+	/* background-color: var(--background-minus-black); */
+	/* height: 70vh; */
+	padding: 0 3vw;
 
-    /* z-index: 1; */
-    
+	display: grid;
+    grid-template-columns: repeat(12, minmax(0, 1fr));
+    grid-auto-rows: 7rem;
+    grid-gap: 1.25rem;
+    position: relative;
+}
+.container-principal-popular{
+	background-color: var(--background-minus-black);
+	grid-column: auto/span 6;
+    grid-row: auto/span 4;
+	border-radius: 20px;
+
+	display: grid;
+	grid-template-rows: 70% 30%;
+}
+.container-backdrop-popular{
+	border-radius: 20px 20px 0 0;
+	background-repeat: no-repeat;
+	background-attachment: inherit;
+	background-size: cover;
+}
+.card-popular-hero{
+	grid-column: auto/span 3;
+    grid-row: auto/span 2;
+	background-color: var(--background-minus-black);
+	border-radius: 20px;
+	display: grid;
+	grid-template-columns: 45% 55%;
+	align-items: center;
+	padding: 1rem;
+}
+.poster-card-popular-hero{
+	background-color: #00FFFF;
+	height: 95%;
+	/* width: 50%; */
+	/* margin-top: -1rem; */
+	background-image: url('https://image.tmdb.org/t/p/w500/1E5baAaEse26fej7uHcjOgEE2t2.jpg');
+	background-repeat: no-repeat;
+	background-attachment: inherit;
+	background-size: cover;
+	border-radius: 5px;
 }
 
 .container-buttons-hero {
