--- a/style.css
+++ b/style.css
@@ -11,64 +11,6 @@ body {
 	/* overflow-x: hidden; */
 }
 
-.contenedor {
-	width: 90%;
-	max-width: 1000px;
-	margin: 40px auto 100px auto;
-
-	display: grid;
-	grid-template-columns: repeat(4, 1fr);
-	gap: 40px;
-}
-
-.contenedor .pelicula {
-	text-align: center;
-}
-
-.contenedor .pelicula .titulo {
-	font-size: 16px;
-	font-weight: 600;
-}
-
-.contenedor .pelicula .poster {
-	width: 100%;
-	margin-bottom: 10px;
-	border-radius: 15px;
-}
-
-.paginacion {
-	/* position: fixed; */
-	bottom: 0;
-	background: #100a1f;
-	width: 100%;
-	display: flex;
-	justify-content: center;
-	gap: 20px;
-	padding: 10px;
-}
-
-.paginacion button {
-	cursor: pointer;
-	border: none;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	text-align: center;
-	height: 50px;
-	width: 200px;
-	background: #241744;
-	color: #fff;
-	border-radius: 100px;
-	font-family: 'Montserrat', sans-serif;
-	font-weight: 600;
-	transition: .3s ease all;
-}
-
-.paginacion button:hover {
-	background: #137c32;
-}
-
-
 /*Estilo pagina*/
 
 :root {
@@ -252,7 +194,7 @@ main{
 	margin: 2rem 3rem;
 }
 .section-in-theaters{
-	background-color: var(--background-minus-black);
+	/* background-color: var(--background-minus-black); */
 	grid-column: auto/span 8;
     grid-row: auto/span 3;
 }
@@ -260,9 +202,10 @@ main{
 	background-color: var(--background-minus-black);
 	grid-column: auto/span 4;
     grid-row: auto/span 9;
+	margin-left: 1rem;
 }
 .section-popular{
-	background-color: var(--background-minus-black);
+	/* background-color: var(--background-minus-black); */
 	grid-column: auto/span 8;
     grid-row: auto/span 3;
 }
@@ -284,3 +227,84 @@ main{
 	border-style: solid;
 	padding: 0.5rem;
 }
+.contenedorTeatros{
+	/* background-color: #8A2BE2; */
+	padding: 1rem 0	;
+	display: grid;
+	grid-template-columns: repeat(5, 1fr);
+	gap: 1rem;
+	text-align: center;
+	overflow-x: scroll;
+	border-radius: 1rem;
+}
+.peliculaTeatros{
+	background-color: var(--background-minus-black);
+	border-radius: 1rem;
+	cursor: pointer;
+}
+
+.peliculaTeatros .peliTeatro{
+	border-radius: 1rem 1rem 0 0;
+}
+
+.contenedor {
+	/* background-color: #00FFFF; */
+	height: 95%;
+	padding: 1rem 0	;
+	display: grid;
+	grid-template-columns: repeat(20, 1fr);
+	text-align: center;
+	overflow-x: scroll;
+	overflow-y: hidden;
+	border-radius: 1rem;
+	gap: 1rem;
+}
+
+.contenedor .pelicula {
+	text-align: center;
+	cursor: pointer;
+}
+
+.contenedor .pelicula .titulo {
+	/* font-size: 16px; */
+	/* font-weight: 600; */
+}
+
+.contenedor .pelicula .poster {
+	height: 40%;
+	/* width: 100%; */
+	/* margin-bottom: 10px; */
+	border-radius: 1rem;
+}
+
+.paginacion {
+	/* position: fixed; */
+	bottom: 0;
+	background: #100a1f;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	gap: 20px;
+	padding: 10px;
+}
+
+.paginacion button {
+	cursor: pointer;
+	border: none;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	height: 50px;
+	width: 200px;
+	background: #241744;
+	color: #fff;
+	border-radius: 100px;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 600;
+	transition: .3s ease all;
+}
+
+.paginacion button:hover {
+	background: #137c32;
+}	
