Top rated section

--- a/style.css
+++ b/style.css
@@ -210,7 +210,7 @@ main{
     grid-row: auto/span 3;
 }
 .section-top-rated{
-	background-color: var(--background-minus-black);
+	/* background-color: var(--background-minus-black); */
 	grid-column: auto/span 8;
     grid-row: auto/span 3;
 }
@@ -252,12 +252,12 @@ main{
 	height: 95%;
 	padding: 1rem 0	;
 	display: grid;
-	grid-template-columns: repeat(20, 1fr);
-	text-align: center;
+	grid-template-columns: repeat(21, 1fr);
+	/* text-align: center; */
 	overflow-x: scroll;
 	overflow-y: hidden;
 	border-radius: 1rem;
-	gap: 1rem;
+	gap: 1.15rem;
 }
 
 .contenedor .pelicula {
@@ -277,15 +277,19 @@ main{
 	border-radius: 1rem;
 }
 
+.header-section-pelis{
+	display: flex;
+	justify-content: space-between;
+}
 .paginacion {
 	/* position: fixed; */
-	bottom: 0;
-	background: #100a1f;
-	width: 100%;
+	/* bottom: 0; */
+	/* background: #100a1f; */
+	/* width: 100%; */
 	display: flex;
 	justify-content: center;
 	gap: 20px;
-	padding: 10px;
+	/* padding: 10px; */
 }
 
 .paginacion button {
@@ -295,8 +299,9 @@ main{
 	align-items: center;
 	justify-content: center;
 	text-align: center;
-	height: 50px;
-	width: 200px;
+	height: 100%;
+	width: auto;
+	padding: 0 1rem;
 	background: #241744;
 	color: #fff;
 	border-radius: 100px;
@@ -307,4 +312,4 @@ main{
 
 .paginacion button:hover {
 	background: #137c32;
-}	
+}
