--- a/style.css
+++ b/style.css
@@ -265,10 +265,10 @@ main{
 	cursor: pointer;
 }
 
-.contenedor .pelicula .titulo {
-	/* font-size: 16px; */
-	/* font-weight: 600; */
-}
+/* .contenedor .pelicula .titulo {
+	font-weight: 600;
+	font-size: 16px;
+} */
 
 .contenedor .pelicula .poster {
 	height: 40%;
