--- a/style.css
+++ b/style.css
@@ -199,7 +199,7 @@ main{
     grid-row: auto/span 3;
 }
 .section-trailers{
-	background-color: var(--background-minus-black);
+	/* background-color: var(--background-minus-black); */
 	grid-column: auto/span 4;
     grid-row: auto/span 9;
 	margin-left: 1rem;
@@ -238,13 +238,27 @@ main{
 	border-radius: 1rem;
 }
 .peliculaTeatros{
-	background-color: var(--background-minus-black);
+	/* background-color: var(--background-minus-black); */
 	border-radius: 1rem;
 	cursor: pointer;
+	background-color: var(--background-minus-black);
 }
 
 .peliculaTeatros .peliTeatro{
 	border-radius: 1rem 1rem 0 0;
+}
+.contenedorTrailers{
+	display: flex;
+	flex-direction: column;
+	overflow-x: hidden;
+	overflow-y: visible;
+	gap: 0.5rem;
+	margin-top: 1rem;
+}
+iframe{
+	width: 100%;
+	height: 20rem;
+	border-radius: 20px;
 }
 
 .contenedor {
