--- a/styleMovie.css
+++ b/styleMovie.css
@@ -12,20 +12,21 @@ body {
 }
 
 :root {
-    --background: #050505;
+	--background: #050505;
 	--background-minus-black: #151616;
-    --purple-principal: #8A2BE2;
-    --celeste-principal: #00FFFF;
+	--purple-principal: #8A2BE2;
+	--celeste-principal: #00FFFF;
 
 	--white-text: #e0e0e0;
 }
+
 header {
 	/* display: grid; */
 	/* grid-template-columns: repeat(2, 1fr); */
-	height: 10vh;
+	height: 100vh;
 	width: 100%;
 	align-items: center;
-	
+
 	/* background-image: url('https://www.etapainfantil.com/wp-content/uploads/2020/05/Peliculas-Netflix-familiares-1000x563.jpg.webp'); */
 	background-repeat: no-repeat;
 	background-attachment: fixed;
@@ -33,43 +34,58 @@ header {
 	/* padding-bottom: 5vh; */
 
 	position: relative;
-  
-  &::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 10vh; /* Adjust height for fade-out length */
-    /* background: linear-gradient(to bottom, rgba(255, 255, 255, 0), var(--background)); */
-  }
+	/* padding-bottom: 10vh; */
+
+	&::after {
+		content: "";
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		width: 100%;
+		height: 7vh;
+		/* Adjust height for fade-out length */
+		background: linear-gradient(to bottom, rgba(255, 255, 255, 0), var(--background));
+	}
 }
-.header-bar{
+
+.header-bar {
 	display: grid;
 	grid-template-columns: 20% 80%;
 	height: 10vh;
 	padding: 1vh 3vw;
 	align-items: center;
 	/* background: linear-gradient(to top, rgba(255, 255, 255, 0), var(--background)); */
-	background-color: var(--background-minus-black);
+	/* background-color: var(--background-minus-black); */
 	/* backdrop-filter: blur(5px); */
-    /* border-style: solid; */
-    /* border-color: white; */
-    /* border-width: 2px; */
-    /* border-radius: 15px; */
+	/* border-style: solid; */
+	/* border-color: white; */
+	/* border-width: 2px; */
+	/* border-radius: 15px; */
 	margin-bottom: 1rem;
 
-	&:hover{
+	&:hover {
 		background-color: var(--background);
 		transition: 2s;
+
+		/* .logo-header h1 {
+			background: linear-gradient(to left, var(--purple-principal), var(--celeste-principal));
+			-webkit-background-clip: text;
+			background-clip: text;
+			color: transparent;
+		} */
 	}
 }
 
-.logo-header h1{
+.logo-header:hover {
+	cursor: pointer;
+}
+
+.logo-header h1 {
 	background: linear-gradient(to left, var(--purple-principal), var(--celeste-principal));
-    -webkit-background-clip: text;
-    background-clip: text;
-    color: transparent;
+	-webkit-background-clip: text;
+	background-clip: text;
+	color: transparent;
+	/* color: var(--background); */
 	/* background-size: 25%; */
 }
 
@@ -78,4 +94,45 @@ header {
 	gap: 3vw;
 	justify-content: flex-end;
 	align-items: center;
+}
+
+.headerContainer {
+	width: 90%;
+	position: absolute;
+	bottom: 0;
+	/* margin-bottom: 20vh; */
+	padding-bottom: 5vh;
+	margin: 0 3vw;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	color: var(--background);
+}
+
+.containerTituloPelicula {
+	margin-bottom: 1rem;
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+}
+
+.tituloPelicula {
+	font-size: 4rem;
+}
+
+.frasePelicula {
+	font-size: 2rem;
+}
+
+#tituloFrasePelicula {
+    /* font-size: 36px; */
+    font-weight: bold;
+    /* text-transform: uppercase; */
+    color: #050505; /* Color base */
+    transition: color 0.5s ease; /* Transición suave para cambios de color */
+}
+
+/* Efecto de cambio de color */
+#tituloFrasePelicula.cambio-color {
+    color: #e0e0e0; /* Nuevo color */
 }
