--- a/styleMovie.css
+++ b/styleMovie.css
@@ -128,11 +128,54 @@ header {
     /* font-size: 36px; */
     font-weight: bold;
     /* text-transform: uppercase; */
-    color: #050505; /* Color base */
+    color: #e0e0e0; /* Color base */
     transition: color 0.5s ease; /* Transición suave para cambios de color */
 }
 
 /* Efecto de cambio de color */
 #tituloFrasePelicula.cambio-color {
-    color: #e0e0e0; /* Nuevo color */
+    color: #050505; /* Nuevo color */
+}
+
+.container-movie-info{
+	background-color: var(--background-minus-black);
+	margin: 3rem 5vw;
+	/* padding: 1rem 0; */
+	display: grid;
+	grid-template-columns: 30% 70%;
+	height: 75vh;
+	border-radius: 20px;
+}
+
+.posterPeli{
+	height: 75vh;
+	width: 100%;
+	/* background-color: #00FFFF; */
+}
+.poster{
+	border-radius: 20px 0 0 20px;
+	height: 75vh;
+	width: 100.2%;
+}
+.container-movieInfo{
+	width: 100%;
+	/* height: 100%; */
+	/* background-color: #00FFFF; */
+	display: flex;
+	flex-direction: column;
+}
+.movieInfo{
+	padding: 1.5rem;
+}
+.barInfo{
+	margin-top: auto;
+	background: linear-gradient(to left, var(--purple-principal), var(--celeste-principal));
+	/* margin: 0 3vw; */
+	color: var(--background);
+	text-align: center;
+	padding: 1.5rem;
+	/* border-radius: 20px; */
+	border-radius: 0 0 20px 0;
+	display: flex;
+	justify-content: space-between;
 }
