--- a/styleMovie.css
+++ b/styleMovie.css
@@ -189,8 +189,54 @@ header {
 	gap: 1rem;
 	margin-bottom: 1rem;
 }
+.genre{
+	background-color: var(--white-text); /* Color con transparencia */
+	width: auto;
+	display: inline-flex;
+	margin: 1rem 1rem 1rem 0;
+	padding: 0.5rem;
+	border-radius: 10px;
+	color: var(--background);
+}
+.original-language-container{
+	display: flex;
+    gap: 3rem;
+    margin-top: 4rem; /* Ajuste para alinear al final del contenedor */
+    align-self: flex-end; /* Alinear al final del contenedor */
+}
 .scoreDiv{
-	padding: 1.5rem;
+	margin-top: 1.5rem;
+	margin-right: 1.5rem;
+	border-radius: 10px;
+	height: 20%;
+	padding: 1rem;
+	/* background-color: #00FFFF; */
+	text-align: center;
+	color: var(--background);
+
+	/* display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center; */
+
+	display: grid;
+	grid-template-rows: 80% 20%;
+	/* align-items: center; */
+	/* justify-content: center; */
+}
+/* .container-score-principal{
+	background-color: #00FFFF;
+	width: 100%;
+	height: 100%;
+} */
+.rating-circle{
+	font-size: 2rem;
+	border-bottom: solid 1px;
+	padding-bottom: 0.2rem;
+}
+.votes-count{
+	padding-top: 0.1rem;
+	padding-bottom: 0.5rem;
 }
 .barInfo{
 	margin-top: auto;
