--- a/styleMovie.css
+++ b/styleMovie.css
@@ -252,15 +252,21 @@ a{
 	justify-content: flex-end;
 	font-size: 5rem;
 }
-/* .container-score-principal{
-	background-color: #00FFFF;
+.container-score-principal{
 	width: 100%;
-	height: 100%;
-} */
-.rating-circle{
-	font-size: 2rem;
+	/* background-color: #00FFFF; */
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 0.5rem;
+
 	border-bottom: solid 1px;
 	padding-bottom: 0.2rem;
+	margin-bottom: 0.2rem;
+}
+.rating-circle{
+	font-size: 2rem;
+	
 }
 .votes-count{
 	padding-top: 0.1rem;
