--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@ body {
 	color: var(--white-text);
 	/* overflow-x: hidden; */
 }
+html{
+	scroll-behavior: smooth;
+}
 
 /*Estilo pagina*/
 
@@ -57,10 +60,9 @@ header {
 	background-color: var(--background-minus-black);
 	/* backdrop-filter: blur(5px); */
     /* border-style: solid; */
-    /* border-color: white; */
-    /* border-width: 2px; */
+    /* border-color: white;	 */
     /* border-radius: 15px; */
-	margin-bottom: 1rem;
+	margin-bottom: 1rem;	
 
 	&:hover{
 		background-color: var(--background);
@@ -126,7 +128,7 @@ header {
 	background-size: cover;
 }
 .container-info-popular{
-	padding: 2rem;
+	padding: 1rem;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -193,6 +195,10 @@ header {
 	text-align: center;
 	padding: 2rem;
 	border-radius: 20px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 0.4rem;
 }
 a{
 	text-decoration: none;
@@ -354,3 +360,42 @@ button i{
 /* .paginacion button:hover {
 	background: #137c32;
 } */
+
+footer{
+	/* background-color: var(--background-minus-black); */
+	width: 100%;
+	height: 12vh;
+	padding: 1rem 3rem;
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+}
+/* Estilo para la lista desordenada (ul) */
+ul {
+    list-style: none; /* Elimina los marcadores */
+    padding: 0; /* Elimina el relleno predeterminado */
+    margin: 0; /* Elimina el margen predeterminado */
+}
+
+/* Estilo para los elementos de la lista (li) */
+ul li {
+    display: inline; /* Organiza los elementos horizontalmente */
+    margin-right: 10px; /* Añade un espacio entre los elementos */
+}
+.info-footer{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin-top: auto;
+}
+.info-footer a{
+	color: var(--white-text);
+	
+	&:hover{
+		text-decoration: underline;
+	}
+}
+.elements-footer{
+	display: flex;
+	gap: 0.5rem;
+}
