--- a/styleMovie.css
+++ b/styleMovie.css
@@ -10,6 +10,9 @@ body {
 	color: var(--white-text);
 	/* overflow-x: hidden; */
 }
+html{
+	scroll-behavior: smooth;
+}
 
 :root {
 	--background: #050505;
@@ -289,4 +292,42 @@ a{
 	display: flex;
 	gap: 0.5rem;
 	font-size: 1.2rem;
+}
+footer{
+	/* background-color: var(--background-minus-black); */
+	width: 100%;
+	height: 12vh;
+	padding: 1rem 3rem;
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+}
+/* Estilo para la lista desordenada (ul) */
+ul {
+    list-style: none; /* Elimina los marcadores */
+    padding: 0; /* Elimina el relleno predeterminado */
+    margin: 0; /* Elimina el margen predeterminado */
+}
+
+/* Estilo para los elementos de la lista (li) */
+ul li {
+    display: inline; /* Organiza los elementos horizontalmente */
+    margin-right: 10px; /* Añade un espacio entre los elementos */
+}
+.info-footer{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin-top: auto;
+}
+.info-footer a{
+	color: var(--white-text);
+	
+	&:hover{
+		text-decoration: underline;
+	}
+}
+.elements-footer{
+	display: flex;
+	gap: 0.5rem;
 }
