--- a/mediaQuerys.css
+++ b/mediaQuerys.css
@@ -1,31 +1,47 @@
 /* Media query para pantallas pequeñas, como celulares */
 @media only screen and (max-width: 500px) {
-    header{
+    header {
         height: auto;
+        margin-bottom: 1rem;
     }
-    .header-bar{
+
+    .header-bar {
         display: flex;
         align-items: center;
         justify-content: space-between;
+        height: 7vh;
     }
-    .options-header .option{
+
+    .options-header .option {
         display: none;
     }
-    .more-popular-hero{
+
+    .more-popular-hero {
         display: flex;
         flex-direction: column;
     }
-    .container-principal-popular{
+
+    .container-principal-popular {
         display: flex;
         height: auto;
         flex-direction: column;
     }
-    .container-backdrop-popular{
+
+    .container-backdrop-popular {
         height: 30vh;
+    }
+
+    .card-popular-hero {
+        /* font-size: 0.7rem; */
+        /* padding: 0.5rem; */
+        height: 40vh;
+        grid-template-columns: 55% 45%;
+    }
+    main{
+        display: flex;
+        flex-direction: column;
     }
 }
 
 /* Media query para pantallas más grandes, como tablets */
-@media only screen and (max-width: 768px) {
-
-}
+@media only screen and (max-width: 768px) {}
