--- a/style.css
+++ b/style.css
@@ -53,28 +53,27 @@ html {
 header {
 	/* display: grid; */
 	/* grid-template-columns: repeat(2, 1fr); */
-	height: 90vh;
+	height: 100vh;
 	width: 100%;
 	align-items: center;
 
 	/* background-image: url('https://www.etapainfantil.com/wp-content/uploads/2020/05/Peliculas-Netflix-familiares-1000x563.jpg.webp'); */
-	background-repeat: no-repeat;
+	/* background-repeat: no-repeat;
 	background-attachment: fixed;
-	background-size: 100%;
+	background-size: 100%; */
 	/* padding-bottom: 5vh; */
+	background: radial-gradient(var(--pink-principal), var(--background));
 
 	position: relative;
 
-	&::after {
+	/* &::after {
 		content: "";
 		position: absolute;
 		bottom: 0;
 		left: 0;
 		width: 100%;
 		height: 10vh;
-		/* Adjust height for fade-out length */
-		/* background: linear-gradient(to bottom, rgba(255, 255, 255, 0), var(--background)); */
-	}
+	} */
 }
 
 .header-bar {
@@ -142,9 +141,9 @@ header {
 	position: relative;
 	display: inline-block;
 	width: 40%;
-  }
-  
-  input[type="text"] {
+}
+
+input[type="text"] {
 	padding: 0.8rem;
 	border: none;
 	border-radius: 5px;
@@ -153,9 +152,9 @@ header {
 	background-color: var(--background-minus-black);
 	color: var(--white-text);
 	font-size: 1rem;
-  }
-  
-  button {
+}
+
+button {
 	padding: 0.8rem;
 	border: none;
 	border-radius: 0 5px 5px 0;
@@ -167,27 +166,28 @@ header {
 	top: 0;
 	font-size: 0.8rem;
 	font-size: 1rem;
-	
-	&:hover{
+
+	&:hover {
 		background-color: var(--pink-principal);
 		transition: 0.5s;
 	}
-	&:not(:hover){
+
+	&:not(:hover) {
 		transition: 0.5s;
 	}
-  }
-  
-  /* button:hover {
+}
+
+/* button:hover {
 	background-color: #333;
   } */
-  
-  /* Icon inside button */
-  button i {
+
+/* Icon inside button */
+button i {
 	/* font-size: 1rem; */
 	height: 100%;
-	
-  }
-  
+
+}
+
 
 .option-search {
 	display: flex;
@@ -244,45 +244,139 @@ header {
 	/* Ancho cero cuando no se pasa el cursor */
 }
 
-.introduction-section {
+/* .introduction-section {
 	margin: 1rem 3vw;
-}
+} */
 
 .more-popular-hero {
 	/* background-color: var(--background-minus-black); */
 	/* height: 70vh; */
-	padding: 0 3vw;
+	padding: 0 8vw;
 
-	display: grid;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+	/* display: grid;
 	grid-template-columns: repeat(12, minmax(0, 1fr));
 	grid-auto-rows: 7rem;
 	grid-gap: 1.25rem;
-	position: relative;
+	position: relative; */
 }
 
 .container-principal-popular {
-	background-color: var(--background-minus-black);
+	/* background-color: var(--background-minus-black);
 	grid-column: auto/span 6;
-	grid-row: auto/span 4;
-	border-radius: 20px;
-
-	display: grid;
-	grid-template-rows: 70% 30%;
+	grid-row: auto/span 4; */
+	border-radius: 10px;
+	/* background-color: var(--background-minus-black); */
+	backdrop-filter: blur(5px);
+	background-color: rgba(255, 255, 255, 0.1);
+	width: 100%;
+	height: 85vh;
+	/* display: grid;
+	grid-template-rows: 70% 30%; */
 }
 
 .container-backdrop-popular {
-	border-radius: 20px 20px 0 0;
+	border-radius: 10px 10px 0 0;
+	/* background-color: #8A2BE2; */
+	width: 100%;
+	height: 85%;
 	background-repeat: no-repeat;
-	background-attachment: inherit;
+	/* background-attachment: fixed; */
 	background-size: cover;
+	background-position: center;
+	/* background-image: linear-gradient(to right, rgba(255,0,0,0), rgba(255,0,0,1)); */
 }
 
+
 .container-info-popular {
-	padding: 1rem;
-	display: flex;
+	/* padding: 1rem; */
+	/* display: flex;
 	flex-direction: column;
+	align-items: center; */
+	/* gap: 2rem; */
+	/* background-color: #00FFFF; */
+	height: 15%;
+	border-radius: 0 0 10px 10px;
+}
+.format-container-info-popular{
+	display: grid;
+	grid-template-columns: repeat(12, minmax(0, 1fr));
+	grid-auto-rows: auto;
+	grid-gap: 1rem;
+	position: relative;
 	align-items: center;
-	gap: 2rem;
+	justify-content: center;
+	padding: 0 1rem;
+	border-radius: 0 0 10px 10px;
+	/* margin-left: 1rem;
+	margin-right: 1rem; */
+	height: 100%;
+	/* background-color: #00FFFF; */
+}
+
+.poster-popular {
+	grid-column: auto/span 3;
+	/* display: flex;
+	align-items: center;
+	justify-content: center; */
+	aspect-ratio: 3/4;
+	width: 95%;
+	margin-top: -100%;
+	/* padding-bottom: 1rem; */
+	border-radius: 10px;
+	/* margin-bottom: 1rem !important; */
+}
+
+.play-button{
+	/* background-color: var(--white-text); */
+	/* border: var(--white-text) solid 5px; */
+	grid-column: 4/span 1;
+	height: 150%;
+	margin-top: -45%;
+	width: 150%;
+	/* border-radius: 100%; */
+	margin-left: -1rem;
+	color: var(--white-text);
+	text-align: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 6rem;
+}
+.titles-popular{
+	grid-column: 5/span 8;
+	margin-left: 1rem;
+}
+.titles-popular h2{
+	font-size: 2rem;
+}
+.headerURL {
+	color: var(--white-text);
+	transition: color 1s; /* Transición para el color de texto */
+
+	&:hover {
+		transform: scale(1.03);
+		transition: transform 1s;
+		/* color: var(--pink-principal); */
+
+		/* Cambios en el header cuando .headerURL se hoverea */
+		.format-container-info-popular {
+			background-color: rgba(255, 255, 255, 0.2);
+			transition: background 1s;
+		}
+		i{
+			/* color: var(--background); */
+			transition: 1.2s;
+		}
+	}
+
+	&:not(:hover) {
+		transition: transform 1.2s;
+
+	}
 }
 
 .container-backdrop-popular h2 {
