--- a/search.css
+++ b/search.css
@@ -1,3 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,500;1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&display=swap');
+
+/* <uniquifier>: Use a unique and descriptive class name
+<weight>: Use a value from 100 to 900 */
+
+.raleway-normal {
+	font-family: "Raleway", sans-serif;
+	font-optical-sizing: auto;
+	font-weight: 500;
+	font-style: normal;
+}
+
+.raleway-bold {
+	font-family: "Raleway", sans-serif;
+	font-optical-sizing: auto;
+	font-weight: 700;
+	font-style: italic;
+}
+
 * {
 	margin: 0;
 	padding: 0;
@@ -14,12 +34,321 @@ html{
 }
 
 :root {
-	--background: #050505;
-	--background-minus-black: #151616;
+	--background: #000000;
+	--background-minus-black: #121212;
+	--third-grade-black: #333;
+	--pink-principal: #FF1493;
 	--purple-principal: #8A2BE2;
 	--celeste-principal: #00FFFF;
 
 	--white-text: #e0e0e0;
+}
+
+header {
+	/* display: grid; */
+	/* grid-template-columns: repeat(2, 1fr); */
+	height: 10vh;
+	width: 100%;
+	align-items: center;
+
+	/* background-image: url('https://www.etapainfantil.com/wp-content/uploads/2020/05/Peliculas-Netflix-familiares-1000x563.jpg.webp'); */
+	/* background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: 100%; */
+	/* padding-bottom: 5vh; */
+	
+
+	position: relative;
+
+	/* &::after {
+		content: "";
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		width: 100%;
+		height: 10vh;
+	} */
+}
+
+
+
+.header-bar {
+	/* display: grid; */
+	/* grid-template-columns: 20% 80%; */
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	height: 10vh;
+	padding: 1vh 4vw;
+	align-items: center;
+	/* background: linear-gradient(to top, rgba(255, 255, 255, 0), var(--background)); */
+	/* background-color: var(--background-minus-black); */
+	/* backdrop-filter: blur(5px); */
+	/* border-style: solid; */
+	/* border-color: white;	 */
+	/* border-radius: 15px; */
+	margin-bottom: 1rem;
+}
+
+.logo-header {
+	display: flex;
+	/* gap: 0.5rem; */
+	align-items: center;
+	justify-content: space-between;
+}
+.logo-header a{
+	text-decoration: none;
+}
+
+.logo-header i {
+	font-size: 1.5rem;
+	color: var(--white-text);
+}
+
+.logo-header h1 {
+	color: var(--pink-principal);
+	cursor: pointer;
+	position: relative;
+}
+
+.logo-header h1::after {
+	content: '';
+	position: absolute;
+	left: 0;
+	bottom: -2px;
+	/* Ajusta el valor para la posición del subrayado */
+	width: 0;
+	height: 2px;
+	/* Grosor del subrayado */
+	background-color: var(--pink-principal);
+	transition: width 0.5s ease-in-out;
+	/* Transición para el ancho */
+}
+
+.logo-header h1:hover::after {
+	width: 100%;
+	/* Ancho completo al pasar el cursor */
+}
+
+.logo-header h1:not(:hover)::after {
+	width: 0;
+	/* Ancho cero cuando no se pasa el cursor */
+}
+
+
+.search-container {
+	position: relative;
+	display: inline-block;
+	width: 40%;
+}
+
+input[type="text"] {
+	padding: 0.8rem;
+	border: none;
+	border-radius: 5px;
+	width: 100%;
+	box-sizing: border-box;
+	background-color: var(--background-minus-black);
+	color: var(--white-text);
+	font-size: 1rem;
+}
+
+button {
+	padding: 0.8rem;
+	border: none;
+	border-radius: 0 5px 5px 0;
+	background-color: var(--third-grade-black);
+	color: white;
+	cursor: pointer;
+	position: absolute;
+	right: 0;
+	top: 0;
+	font-size: 0.8rem;
+	font-size: 1rem;
+
+	&:hover {
+		background-color: var(--pink-principal);
+		transition: 0.5s;
+	}
+
+	&:not(:hover) {
+		transition: 0.5s;
+	}
+}
+
+/* button:hover {
+	background-color: #333;
+  } */
+
+/* Icon inside button */
+button i {
+	/* font-size: 1rem; */
+	height: 100%;
+
+}
+
+
+.option-search {
+	display: flex;
+	color: var(--white-text);
+	gap: 0.5rem;
+	align-items: center;
+	padding: 0.5rem;
+	border-radius: 5px;
+	background-color: var(--pink-principal);
+
+	&:hover {
+		transition: 0.5s;
+		transform: scale(1.2);
+		background-color: var(--white-text);
+		color: var(--pink-principal);
+	}
+
+	&:not(:hover) {
+		transition: 0.5s;
+	}
+}
+
+.options-header {
+	display: flex;
+	gap: 3vw;
+	justify-content: flex-end;
+	align-items: center;
+}
+
+.option {
+	/* color: var(--pink-principal); */
+	cursor: pointer;
+	position: relative;
+}
+
+.option::after {
+	content: '';
+	position: absolute;
+	left: 0;
+	bottom: -2px;
+	width: 0;
+	height: 2px;
+	background-color: var(--white-text);
+	transition: width 0.4s ease-in-out;
+}
+
+.option:hover::after {
+	width: 100%;
+	/* Ancho completo al pasar el cursor */
+}
+
+.option:not(:hover)::after {
+	width: 0;
+	/* Ancho cero cuando no se pasa el cursor */
+}
+
+
+.search-container {
+	position: relative;
+	display: inline-block;
+	width: 40%;
+}
+
+input[type="text"] {
+	padding: 0.8rem;
+	border: none;
+	border-radius: 5px;
+	width: 100%;
+	box-sizing: border-box;
+	background-color: var(--background-minus-black);
+	color: var(--white-text);
+	font-size: 1rem;
+}
+
+button {
+	padding: 0.8rem;
+	border: none;
+	border-radius: 0 5px 5px 0;
+	background-color: var(--third-grade-black);
+	color: white;
+	cursor: pointer;
+	position: absolute;
+	right: 0;
+	top: 0;
+	font-size: 0.8rem;
+	font-size: 1rem;
+
+	&:hover {
+		background-color: var(--pink-principal);
+		transition: 0.5s;
+	}
+
+	&:not(:hover) {
+		transition: 0.5s;
+	}
+}
+
+/* button:hover {
+	background-color: #333;
+  } */
+
+/* Icon inside button */
+button i {
+	/* font-size: 1rem; */
+	height: 100%;
+
+}
+
+
+.option-search {
+	display: flex;
+	color: var(--white-text);
+	gap: 0.5rem;
+	align-items: center;
+	padding: 0.5rem;
+	border-radius: 5px;
+	background-color: var(--pink-principal);
+
+	&:hover {
+		transition: 0.5s;
+		transform: scale(1.2);
+		background-color: var(--white-text);
+		color: var(--pink-principal);
+	}
+
+	&:not(:hover) {
+		transition: 0.5s;
+	}
+}
+
+.options-header {
+	display: flex;
+	gap: 3vw;
+	justify-content: flex-end;
+	align-items: center;
+}
+
+.option {
+	/* color: var(--pink-principal); */
+	cursor: pointer;
+	position: relative;
+}
+
+.option::after {
+	content: '';
+	position: absolute;
+	left: 0;
+	bottom: -2px;
+	width: 0;
+	height: 2px;
+	background-color: var(--white-text);
+	transition: width 0.4s ease-in-out;
+}
+
+.option:hover::after {
+	width: 100%;
+	/* Ancho completo al pasar el cursor */
+}
+
+.option:not(:hover)::after {
+	width: 0;
+	/* Ancho cero cuando no se pasa el cursor */
 }
 
 .container {
