--- a/style.css
+++ b/style.css
@@ -244,9 +244,6 @@ button i {
 	/* Ancho cero cuando no se pasa el cursor */
 }
 
-/* .introduction-section {
-	margin: 1rem 3vw;
-} */
 
 .more-popular-hero {
 	/* background-color: var(--background-minus-black); */
@@ -351,7 +348,7 @@ button i {
 	margin-left: 1rem;
 }
 .titles-popular h2{
-	font-size: 2rem;
+	font-size: 1.7rem;
 }
 .headerURL {
 	color: var(--white-text);
@@ -365,7 +362,7 @@ button i {
 		/* Cambios en el header cuando .headerURL se hoverea */
 		.format-container-info-popular {
 			background-color: rgba(255, 255, 255, 0.2);
-			transition: background 1s;
+			transition: 1s;
 		}
 		i{
 			/* color: var(--background); */
@@ -374,8 +371,11 @@ button i {
 	}
 
 	&:not(:hover) {
-		transition: transform 1.2s;
+		transition: 1.2s;
 
+		.format-container-info-popular {
+			transition: 1s;
+		}
 	}
 }
 
