--- a/style.css
+++ b/style.css
@@ -110,6 +110,7 @@ header {
 	color: var(--pink-principal);
 	cursor: pointer;
 	position: relative;
+	font-size: 2rem;
 }
 
 .logo-header h1::after {
@@ -144,7 +145,7 @@ header {
 }
 
 input[type="text"] {
-	padding: 0.8rem;
+	padding: 0.6rem;
 	border: none;
 	border-radius: 5px;
 	width: 100%;
@@ -155,7 +156,7 @@ input[type="text"] {
 }
 
 .search-container button {
-	padding: 0.8rem;
+	padding: 0.6rem;
 	border: none;
 	border-radius: 0 5px 5px 0;
 	background-color: var(--third-grade-black);
@@ -441,7 +442,7 @@ button i {
 	/* background-color: var(--third-grade-black); */
 	/* background: linear-gradient(to bottom, var(--pink-principal), var(--background)); */
 	backdrop-filter: blur(5px);
-	background-color: rgba(255, 20, 147, 0.5);
+	background-color: rgba(255, 20, 147, 0.6);
 	margin: 0 3vw;
 	color: var(--white-text);
 	text-align: center;
@@ -455,7 +456,7 @@ button i {
 
 	&:hover{
 		transform: scale(1.02);
-		background-color: rgba(255, 20, 147, 0.7);
+		background-color: rgba(255, 20, 147, 0.8);
 		transition: 0.2s;
 	}
 	&:not(:hover){
@@ -536,6 +537,21 @@ main {
 	border-radius: 1rem;
 	cursor: pointer;
 	background-color: var(--background-minus-black);
+	display: flex;
+	flex-direction: column;
+	gap: 0.2rem;
+	padding-bottom: 0.2rem;
+
+	&:hover{
+		transform: scale(1.03);
+		background-color: var(--white-text);
+		color: var(--background-minus-black);
+		/* border: var(--white-text) solid 1px; */
+		transition: 0.2s;
+	}
+	&:not(:hover){
+		transition: 0.2s;
+	}
 }
 
 .peliculaTeatros .peliTeatro {
@@ -578,6 +594,14 @@ iframe {
 .contenedor .pelicula {
 	text-align: center;
 	cursor: pointer;
+
+	&:hover{
+		transform: scale(1.08);
+		transition: 0.2s;
+	}
+	&:not(:hover){
+		transition: 0.2s;
+	}
 }
 
 /* .contenedor .pelicula .titulo {
