--- a/styleMovie.css
+++ b/styleMovie.css
@@ -107,6 +107,7 @@ header {
 	color: var(--pink-principal);
 	cursor: pointer;
 	position: relative;
+	font-size: 2rem;
 }
 
 .logo-header h1::after {
