--- a/Home/sass/indexStyle.css
+++ b/Home/sass/indexStyle.css
@@ -270,4 +270,62 @@ header .more-popular-hero .headerURL .container-principal-popular .container-inf
   font-weight: 700;
   font-style: italic;
   font-size: 1.7rem;
+}
+
+.container-invitation-filter {
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+  background-color: rgba(255, 20, 147, 0.6);
+  margin: 0 3vw;
+  color: #e0e0e0;
+  text-align: center;
+  padding: 2.5rem;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.4rem;
+  font-family: "Raleway", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: italic;
+  font-size: 2rem;
+}
+.container-invitation-filter:hover {
+  transform: scale(1.02);
+  background-color: rgba(255, 20, 147, 0.8);
+  transition: 0.2s;
+}
+.container-invitation-filter:not(:hover) {
+  transition: 0.2s;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  margin: 2rem 3rem;
+  font-family: "Raleway", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+  font-size: 1rem;
+}
+main .section-in-theaters {
+  grid-column: auto/span 12;
+  grid-row: auto/span 3;
+}
+main .section-popular {
+  grid-column: auto/span 12;
+  grid-row: 4/span 3;
+}
+main .section-top-rated {
+  grid-column: auto/span 12;
+  grid-row: 7/span 3;
+  margin-top: 1rem;
+}
+main .section-trailers {
+  grid-column: auto/span 4;
+  grid-row: auto/span 9;
+  margin-left: 1rem;
 }/*# sourceMappingURL=indexStyle.css.map */
